samples/_failures_safe/1761593887_69b20c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e223d7da.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_e223d7da.c:154:5: error: expected declaration or statement at end of input
  154 |     }
      |     ^
